# Konami drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Konami drivers'
group_srcs = [
    'k007121.cpp',
    'k007342_k007420.cpp',
    'k007452.cpp',
    'k051316.cpp',
    'k051733.cpp',
    'k051960.cpp',
    'k052109.cpp',
    'k053245.cpp',
    'k053247.cpp',
    'k053250.cpp',
    'k053251.cpp',
    'k053936.cpp',
    'k054000.cpp',
    'k054338.cpp',
    'k055555.cpp',
    'k056832.cpp',
    'konamigx.cpp',
    'konamiic.cpp',
    'timeplt_snd.cpp',
]
drivers = {
    'd_88games.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_ajax.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_aliens.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_asterix.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_battlnts.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_bishi.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_bladestl.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_blockhl.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_bottom9.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_chqflag.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_circusc.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_combatsc.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_contra.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_crimfght.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_dbz.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_ddribble.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_divebomb.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_fastlane.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_finalzr.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_flkatck.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_gberet.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_gbusters.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_gijoe.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_gradius3.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_gyruss.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_hcastle.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_hexion.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_hyperspt.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_ironhors.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_jackal.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_jailbrek.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_junofrst.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_kontest.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_labyrunr.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_lethal.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_mainevt.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_megazone.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_mikie.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_mogura.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_moo.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_mystwarr.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_nemesis.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_pandoras.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_parodius.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_pingpong.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_pooyan.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_rockrage.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_rocnrope.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_rollerg.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_sbasketb.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_scotrsht.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_shaolins.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_simpsons.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_spy.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_surpratk.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_thunderx.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_timeplt.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_tmnt.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_tp84.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_trackfld.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_tutankhm.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_twin16.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_ultraman.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_vendetta.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_wecleman.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_xexex.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_xmen.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
    'd_yiear.cpp': [
        'hd6309',
        'i8039',
        'i8x41',
        'konami',
        'm6800',
        'm68000',
        'm6805',
        'm6809',
        'z80',
        'dtimer',
        'eeprom',
        'resnet',
        'watchdog',
        'ay8910',
        'dac',
        'flt_rc',
        'k005289',
        'k007232',
        'k051649',
        'k053260',
        'k054539',
        'msm6295',
        'samples',
        'sn76496',
        'upd7759',
        'vlm5030',
        'ym2151',
        'ym2203',
        'ym3812',
        'ymz280b',
    ],
}
