# Konami drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Konami drivers'
group_srcs = [
    'k007121.cpp',
    'k007342_k007420.cpp',
    'k007452.cpp',
    'k051316.cpp',
    'k051733.cpp',
    'k051960.cpp',
    'k052109.cpp',
    'k053245.cpp',
    'k053247.cpp',
    'k053250.cpp',
    'k053251.cpp',
    'k053936.cpp',
    'k054000.cpp',
    'k054338.cpp',
    'k055555.cpp',
    'k056832.cpp',
    'konamigx.cpp',
    'konamiic.cpp',
    'timeplt_snd.cpp',
]
drivers = {
    'd_88games.cpp': ['ay8910', 'flt_rc', 'konami', 'upd7759', 'ym2151', 'z80'],
    'd_ajax.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'm6809', 'ym2151', 'z80'],
    'd_aliens.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'ym2151', 'z80'],
    'd_asterix.cpp': ['ay8910', 'eeprom', 'flt_rc', 'k053260', 'm68000', 'ym2151', 'z80'],
    'd_battlnts.cpp': ['ay8910', 'flt_rc', 'hd6309', 'ym3812', 'z80'],
    'd_bishi.cpp': ['ay8910', 'flt_rc', 'm68000', 'ymz280b', 'z80'],
    'd_bladestl.cpp': ['ay8910', 'flt_rc', 'hd6309', 'm6809', 'upd7759', 'ym2203', 'z80'],
    'd_blockhl.cpp': ['ay8910', 'flt_rc', 'konami', 'ym2151', 'z80'],
    'd_bottom9.cpp': ['ay8910', 'flt_rc', 'k007232', 'm6809', 'z80'],
    'd_chqflag.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'ym2151', 'z80'],
    'd_circusc.cpp': ['ay8910', 'dac', 'flt_rc', 'm6809', 'sn76496', 'z80'],
    'd_combatsc.cpp': ['ay8910', 'flt_rc', 'hd6309', 'upd7759', 'watchdog', 'ym2203', 'z80'],
    'd_contra.cpp': ['ay8910', 'flt_rc', 'hd6309', 'm6809', 'ym2151', 'z80'],
    'd_crimfght.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'ym2151', 'z80'],
    'd_dbz.cpp': ['ay8910', 'flt_rc', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_ddribble.cpp': ['ay8910', 'flt_rc', 'm6809', 'vlm5030', 'ym2203', 'z80'],
    'd_divebomb.cpp': ['ay8910', 'flt_rc', 'sn76496', 'z80'],
    'd_fastlane.cpp': ['ay8910', 'flt_rc', 'hd6309', 'k007232', 'watchdog', 'z80'],
    'd_finalzr.cpp': ['ay8910', 'dac', 'flt_rc', 'i8x41', 'm6809', 'resnet', 'sn76496', 'z80'],
    'd_flkatck.cpp': ['ay8910', 'flt_rc', 'hd6309', 'k007232', 'watchdog', 'ym2151', 'z80'],
    'd_gberet.cpp': ['ay8910', 'flt_rc', 'sn76496', 'watchdog', 'z80'],
    'd_gbusters.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'ym2151', 'z80'],
    'd_gijoe.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'k054539', 'm68000', 'z80'],
    'd_gradius3.cpp': ['ay8910', 'flt_rc', 'k007232', 'm68000', 'ym2151', 'z80'],
    'd_gyruss.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'm6809', 'z80'],
    'd_hcastle.cpp': ['ay8910', 'flt_rc', 'k007232', 'k051649', 'konami', 'ym3812', 'z80'],
    'd_hexion.cpp': ['ay8910', 'flt_rc', 'k051649', 'msm6295', 'z80'],
    'd_hyperspt.cpp': ['ay8910', 'dac', 'flt_rc', 'm6809', 'sn76496', 'vlm5030', 'z80'],
    'd_ironhors.cpp': ['ay8910', 'flt_rc', 'm6809', 'ym2203', 'z80'],
    'd_jackal.cpp': ['ay8910', 'flt_rc', 'm6809', 'ym2151', 'z80'],
    'd_jailbrek.cpp': ['ay8910', 'flt_rc', 'm6809', 'sn76496', 'vlm5030', 'z80'],
    'd_junofrst.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'm6809', 'z80'],
    'd_kontest.cpp': ['ay8910', 'flt_rc', 'sn76496', 'z80'],
    'd_labyrunr.cpp': ['ay8910', 'flt_rc', 'hd6309', 'ym2203', 'z80'],
    'd_lethal.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'hd6309', 'k054539', 'z80'],
    'd_mainevt.cpp': ['ay8910', 'flt_rc', 'hd6309', 'k007232', 'upd7759', 'ym2151', 'z80'],
    'd_megazone.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'm6809', 'resnet', 'z80'],
    'd_mikie.cpp': ['ay8910', 'flt_rc', 'm6809', 'sn76496', 'z80'],
    'd_mogura.cpp': ['ay8910', 'dac', 'flt_rc', 'z80'],
    'd_moo.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'k054539', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_mystwarr.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'k054539', 'm68000', 'z80'],
    'd_nemesis.cpp': ['ay8910', 'flt_rc', 'k005289', 'k007232', 'k051649', 'm68000', 'vlm5030', 'ym2151', 'ym3812', 'z80'],
    'd_pandoras.cpp': ['ay8910', 'dac', 'flt_rc', 'i8039', 'm6809', 'z80'],
    'd_parodius.cpp': ['ay8910', 'flt_rc', 'k053260', 'konami', 'ym2151', 'z80'],
    'd_pingpong.cpp': ['ay8910', 'flt_rc', 'sn76496', 'z80'],
    'd_pooyan.cpp': ['ay8910', 'flt_rc', 'resnet', 'z80'],
    'd_rockrage.cpp': ['ay8910', 'flt_rc', 'hd6309', 'm6809', 'vlm5030', 'ym2151', 'z80'],
    'd_rocnrope.cpp': ['ay8910', 'flt_rc', 'm6809', 'z80'],
    'd_rollerg.cpp': ['ay8910', 'flt_rc', 'k053260', 'konami', 'ym3812', 'z80'],
    'd_sbasketb.cpp': ['ay8910', 'dac', 'flt_rc', 'm6809', 'sn76496', 'vlm5030', 'watchdog', 'z80'],
    'd_scotrsht.cpp': ['ay8910', 'flt_rc', 'm6809', 'ym2203', 'z80'],
    'd_shaolins.cpp': ['ay8910', 'flt_rc', 'm6809', 'sn76496', 'z80'],
    'd_simpsons.cpp': ['ay8910', 'eeprom', 'flt_rc', 'k053260', 'konami', 'ym2151', 'z80'],
    'd_spy.cpp': ['ay8910', 'flt_rc', 'k007232', 'm6809', 'ym3812', 'z80'],
    'd_surpratk.cpp': ['ay8910', 'flt_rc', 'konami', 'ym2151', 'z80'],
    'd_thunderx.cpp': ['ay8910', 'flt_rc', 'k007232', 'konami', 'ym2151', 'z80'],
    'd_timeplt.cpp': ['ay8910', 'flt_rc', 'z80'],
    'd_tmnt.cpp': ['ay8910', 'eeprom', 'flt_rc', 'k007232', 'k053260', 'm68000', 'upd7759', 'ym2151', 'z80'],
    'd_tp84.cpp': ['ay8910', 'flt_rc', 'm6809', 'sn76496', 'z80'],
    'd_trackfld.cpp': ['ay8910', 'dac', 'flt_rc', 'm6800', 'm6809', 'sn76496', 'vlm5030', 'z80'],
    'd_tutankhm.cpp': ['ay8910', 'flt_rc', 'm6809', 'z80'],
    'd_twin16.cpp': ['ay8910', 'flt_rc', 'k007232', 'm68000', 'upd7759', 'ym2151', 'z80'],
    'd_ultraman.cpp': ['ay8910', 'flt_rc', 'm68000', 'msm6295', 'ym2151', 'z80'],
    'd_vendetta.cpp': ['ay8910', 'eeprom', 'flt_rc', 'k053260', 'konami', 'ym2151', 'z80'],
    'd_wecleman.cpp': ['ay8910', 'flt_rc', 'k007232', 'm68000', 'm6809', 'ym2151', 'z80'],
    'd_xexex.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'k054539', 'm68000', 'ym2151', 'z80'],
    'd_xmen.cpp': ['ay8910', 'dtimer', 'eeprom', 'flt_rc', 'k054539', 'm68000', 'ym2151', 'z80'],
    'd_yiear.cpp': ['ay8910', 'flt_rc', 'm6809', 'sn76496', 'vlm5030', 'z80'],
}
